<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="40dp"
        android:orientation="vertical">




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/webDev"
                android:backgroundTint="@color/darkGreen"
                app:cardCornerRadius="30dp"
                android:layout_marginEnd="40dp"
                >
                <TextView

                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/web_development" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/machine"
                android:backgroundTint="@color/darkGreen"
                app:cardCornerRadius="30dp"
                >

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/machine_learning" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/AI"
                android:backgroundTint="@color/darkGreen"
                app:cardCornerRadius="30dp"
                android:layout_marginEnd="40dp"
                >
                <TextView

                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="AI/ML" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/appDev"
                android:backgroundTint="@color/darkGreen"
                app:cardCornerRadius="30dp"
                >

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/app_development" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/web3"
                android:backgroundTint="@color/darkGreen"
                app:cardCornerRadius="30dp"
                android:layout_marginEnd="40dp"
                >
                <TextView

                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/web_3" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/blockchain"
                android:backgroundTint="@color/darkGreen"
                app:cardCornerRadius="30dp"
                >

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/blockchain" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>






    </LinearLayout>




    <Button
        android:id="@+id/button2"
        android:layout_margin="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/darkGreen"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any_advice_or_complaint" />


</LinearLayout>